fix: undo z-index changes for NotificationDrawer, SwingsView

--- a/assets/css/_notification_drawer.scss
+++ b/assets/css/_notification_drawer.scss
@@ -8,6 +8,7 @@
   right: 0;
   top: 0;
   width: 23.5rem;
+  z-index: 1001;
 
   @media screen and (max-width: $mobile-max-width) {
     width: 100%;
